--- a/src/main/resources/templates/menu/main.html
+++ b/src/main/resources/templates/menu/main.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
 
+    <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/menu/main.css}">
 </head>
 <body>
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
 <div class="container">
     <h1>관리자 페이지</h1>
     <button class="main-btn" onclick="navigateTo('/')">메인페이지로 이동</button>
@@ -55,5 +58,6 @@
         }
     }
 </script>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
