--- a/src/main/resources/templates/auth/update-profile.html
+++ b/src/main/resources/templates/auth/update-profile.html
@@ -9,19 +9,27 @@
     <script th:src="@{/js/emailVerify.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
     <script th:src="@{/js/auth/updateProfile.js}"></script>
-    <link th:href="@{/css/auth/profile.css}" rel="stylesheet">
+    <link th:href="@{/css/common.css}" rel="stylesheet">
+    <link th:href="@{/css/auth/updateprofile.css}" rel="stylesheet">
 </head>
 <body>
-<header>
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
+<!--<header>-->
+<!--    <div class="header-container">-->
+<!--        <h1 id="welcome-message"></h1>-->
+<!--        <p>프로필 수정 중...</p>-->
+<!--    </div>-->
+<!--    <div class="group-btn">-->
+<!--        <button class="update-btn" id="updateProfileBtn">수정하기</button>-->
+<!--    </div>-->
+<!--</header>-->
+<main>
     <div class="header-container">
         <h1 id="welcome-message"></h1>
-        <p>프로필 수정 중...</p>
+        <p id="update-status">프로필 수정 중...</p>
     </div>
-    <div class="group-btn">
-        <button class="update-btn" id="updateProfileBtn">수정하기</button>
-    </div>
-</header>
-<main>
+
     <div>
         <input id="hiddenUserId" type="hidden">
         <input id="hiddenUserName" type="hidden">
@@ -110,9 +118,13 @@
 
         </div>
     </div>
+    <div class="group-btn">
+        <button class="update-btn" id="updateProfileBtn">수정하기</button>
+    </div>
 </main>
 <footer>
-    <p>&copy; 2023 회사명. All rights reserved.</p>
+<!--    <p>&copy; 2023 회사명. All rights reserved.</p>-->
+    <div th:replace="~{footer :: footer}"></div>
 </footer>
 </body>
 </html>
