--- a/src/main/resources/templates/menu/breadAdmin.html
+++ b/src/main/resources/templates/menu/breadAdmin.html
@@ -6,11 +6,13 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/menu/breadAdmin.js}"></script>
+    <link th:href="@{/css/common.css}" rel="stylesheet">
     <link th:href="@{/css/menu/commonAdmin.css}" rel="stylesheet">
     <title>빵 정보 입력</title>
 </head>
 <body>
-
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
 <div class="container">
     <h1>빵 정보 입력</h1>
 
@@ -59,6 +61,6 @@
         </div>
     </form>
 </div>
-
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
