--- a/src/main/resources/templates/menu/cartList.html
+++ b/src/main/resources/templates/menu/cartList.html
@@ -9,10 +9,14 @@
     <script src="/js/menu/cartList.js"></script>
     <!-- 새로 만든 알러지 체크 스크립트 -->
     <script src="/static/js/allergyCheck.js"></script>
+    <link th:href="@{/css/common.css}" rel="stylesheet">
     <link th:href="@{/css/menu/cartList.css}" rel="stylesheet">
 
 </head>
 <body>
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
+
 <div class="cart-container">
     <h1 class="cart-title">장바구니</h1>
 
@@ -47,6 +51,6 @@
 </div>
 
 <!-- 외부 스크립트는 body 하단에 위치 -->
-
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
