--- a/src/main/resources/templates/menu/cheeseAdmin.html
+++ b/src/main/resources/templates/menu/cheeseAdmin.html
@@ -6,11 +6,14 @@
   <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
   <script th:src="@{/js/common.js}"></script>
   <script th:src="@{/js/menu/cheeseAdmin.js}"></script>
+  <link th:href="@{/css/menu/common.css}" rel="stylesheet">
   <link th:href="@{/css/menu/commonAdmin.css}" rel="stylesheet">
   <title>치즈 정보 입력</title>
 </head>
 <body>
 <div class="container">
+  <div th:replace="~{header :: header}"></div>
+  <div th:replace="~{navigation :: nav}"></div>
   <h1>치즈 정보 입력</h1>
 
   <form id="cheeseForm" enctype="multipart/form-data">
@@ -53,5 +56,6 @@
     </div>
   </form>
 </div>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
