--- a/src/main/resources/templates/menu/cheeseEdit.html
+++ b/src/main/resources/templates/menu/cheeseEdit.html
@@ -6,10 +6,13 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/menu/cheeseEdit.js}"></script> <!-- 외부 JS 파일 -->
+    <link th:href="@{/css/common.css}" rel="stylesheet">
     <link th:href="@{/css/menu/commonEdit.css}" rel="stylesheet">
     <title>치즈 정보 수정</title>
 </head>
 <body>
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
 <div class="container">
     <h1>치즈 정보 수정</h1>
     <form id="cheeseEditForm" enctype="multipart/form-data">
@@ -56,5 +59,6 @@
         </div>
     </form>
 </div>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
