--- a/src/main/resources/templates/menu/sauceAdmin.html
+++ b/src/main/resources/templates/menu/sauceAdmin.html
@@ -6,10 +6,13 @@
   <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
   <script th:src="@{/js/common.js}"></script>
   <script th:src="@{/js/menu/sauceAdmin.js}"></script>
+  <link th:href="@{/css/common.css}" rel="stylesheet">
   <link th:href="@{/css/menu/commonAdmin.css}" rel="stylesheet">
   <title>소스 정보 입력</title>
 </head>
 <body>
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
 <div class="container">
   <h1>소스 정보 입력</h1>
 
@@ -54,5 +57,6 @@
     </div>
   </form>
 </div>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
