--- a/src/main/resources/templates/menu/sauceEdit.html
+++ b/src/main/resources/templates/menu/sauceEdit.html
@@ -6,10 +6,13 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script src="/js/menu/sauceEdit.js"></script> <!-- 외부 JS 파일 -->
+    <link href="/css/common.css" rel="stylesheet">
     <link href="/css/menu/commonEdit.css" rel="stylesheet">
     <title>소스 정보 수정</title>
 </head>
 <body>
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
 <div class="container">
     <h1>소스 정보 수정</h1>
     <form id="sauceEditForm" enctype="multipart/form-data">
@@ -56,5 +59,6 @@
         </div>
     </form>
 </div>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
