--- a/src/main/resources/templates/menu/vegetableList.html
+++ b/src/main/resources/templates/menu/vegetableList.html
@@ -6,10 +6,13 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/menu/vegetableList.js}"></script>
+    <link th:href="@{/css/common.css}" rel="stylesheet">
     <link th:href="@{/css/menu/commonList.css}" rel="stylesheet">
     <title>야채 목록</title>
 </head>
 <body>
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
 <h1>야채 목록</h1>
 <table>
     <thead>
@@ -44,5 +47,6 @@
 <br>
 <button onclick="location.href='/vegetables/admin'">새 야채 등록</button>
 <button onclick="location.href='/admin'" style="margin-left: 10px;">메인으로 가기</button>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
