--- a/src/main/resources/templates/store/store-detail.html
+++ b/src/main/resources/templates/store/store-detail.html
@@ -8,10 +8,13 @@
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
     <script th:src="@{/js/store/storeDetail.js}"></script>
+    <link th:href="@{/css/common.css}" rel="stylesheet">
     <link th:href="@{/css/store/storeDetail.css}" rel="stylesheet">
 
 </head>
 <body>
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
 <div class="storeDetail-container">
     <h2>지점 상세 정보</h2>
     <form id="storeDetailForm">
@@ -50,5 +53,6 @@
         </div>
     </form>
 </div>
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
